nlp model template code

--- a/notebooks/fine-tuning/tokenizers.ipynb
+++ b/notebooks/fine-tuning/tokenizers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "id": "4c4e38f5-7a6f-4491-993c-0d5168cccdd5",
    "metadata": {},
    "outputs": [
@@ -22,9 +22,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
-      "Package version: 0.0.post1.dev3+g8362a6c.d20240713\n",
+      "Package version: 0.0.post1.dev8+gd983d5a.d20240720\n",
       "PyTorch version: 2.3.1+cu121\n"
      ]
     }
@@ -64,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "a7a29ad2-c178-4348-ae33-847ec0d20d84",
    "metadata": {},
    "outputs": [
@@ -75,7 +73,7 @@
       "CUDA available: True\n",
       "Number of GPUs found:  1\n",
       "Current device ID:     0\n",
-      "GPU device name:       NVIDIA GeForce RTX 3070 Laptop GPU\n",
+      "GPU device name:       NVIDIA GeForce GTX 1080 with Max-Q Design\n",
       "CUDNN version:         8902\n",
       "\n",
       "Device for model training/inference: cuda:0\n"
@@ -103,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 3,
    "id": "ffbf9236-736e-440a-beed-e16a13af8d25",
    "metadata": {},
    "outputs": [],
@@ -121,17 +119,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 4,
    "id": "1d272292-7bfd-487e-9812-8a9c6a39ce70",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4bafbda943ce4fdca94a620add10b572",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer_config.json:   0%|          | 0.00/48.0 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f14e3b1724bf4268b236106e369f584e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "config.json:   0%|          | 0.00/570 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d9659bc411ce4ae3a2bf523087eda2f3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "vocab.txt:   0%|          | 0.00/232k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c84b3fdf16d748a99eb20f16cfeb1e51",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer.json:   0%|          | 0.00/466k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "tokenizer = AutoTokenizer.from_pretrained(pretrained_model_name_or_path=checkpoint, device=device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "id": "8e47f845-c0a4-4d8a-9b1a-c78d54fc1ada",
    "metadata": {},
    "outputs": [
@@ -157,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "c0ef8a3a-98dd-481b-b07b-54940937ed78",
    "metadata": {},
    "outputs": [
@@ -177,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 7,
    "id": "7663c01e-3d13-47a3-91fd-8ccf7c620cba",
    "metadata": {},
    "outputs": [
@@ -214,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 8,
    "id": "d3131bf8-a4c5-491b-aee4-6e3d20072de4",
    "metadata": {},
    "outputs": [
@@ -250,10 +305,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 9,
    "id": "e76f66af-7f37-4df8-84ef-84d40e95159c",
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0314b7b995114b9785e69e8c4f499cdb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model.safetensors:   0%|          | 0.00/440M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -270,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 10,
    "id": "e4e89ea8-eb1e-4c3d-8be4-038a7fedcb6f",
    "metadata": {},
    "outputs": [
@@ -292,14 +361,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 11,
    "id": "b295cd04-cc14-4b51-8612-43143f57183b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "SequenceClassifierOutput(loss=None, logits=tensor([[-0.3974,  0.5378]], grad_fn=<AddmmBackward0>), hidden_states=None, attentions=None)"
+       "SequenceClassifierOutput(loss=None, logits=tensor([[-0.3404,  0.2037]], grad_fn=<AddmmBackward0>), hidden_states=None, attentions=None)"
       ]
      },
      "metadata": {},
@@ -313,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 12,
    "id": "a8109f08-43b6-4722-b56e-90b7e5ab82c7",
    "metadata": {},
    "outputs": [
@@ -333,14 +402,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 13,
    "id": "41cde23d-2367-4e8f-9dfb-f665df89cc01",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "SequenceClassifierOutput(loss=None, logits=tensor([[-0.2439, -0.0344,  0.0288]], grad_fn=<AddmmBackward0>), hidden_states=None, attentions=None)"
+       "SequenceClassifierOutput(loss=None, logits=tensor([[ 0.2144, -0.4391, -0.7003]], grad_fn=<AddmmBackward0>), hidden_states=None, attentions=None)"
       ]
      },
      "metadata": {},
@@ -351,7 +420,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "[[-0.24388239 -0.03437275  0.02879009]]\n"
+      "[[ 0.21442679 -0.4390887  -0.7002971 ]]\n"
      ]
     }
    ],
@@ -364,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 14,
    "id": "119915b4-1943-4e69-894b-b2986fcb0c5c",
    "metadata": {},
    "outputs": [],
@@ -382,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 15,
    "id": "5b4d99f4-3cd0-416c-829e-12454e654bd4",
    "metadata": {},
    "outputs": [
@@ -414,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 16,
    "id": "6e152118-5929-4556-a9b0-893de0b0693f",
    "metadata": {},
    "outputs": [
@@ -422,8 +491,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SequenceClassifierOutput(loss=None, logits=tensor([[-0.4125, -0.1180,  0.0774],\n",
-      "        [-0.3841, -0.1545,  0.0242]], grad_fn=<AddmmBackward0>), hidden_states=None, attentions=None)\n"
+      "SequenceClassifierOutput(loss=None, logits=tensor([[ 0.0928, -0.4638, -0.7647],\n",
+      "        [ 0.0417, -0.4346, -0.7457]], grad_fn=<AddmmBackward0>), hidden_states=None, attentions=None)\n"
      ]
     }
    ],
